--- a/src/style.css
+++ b/src/style.css
@@ -83,6 +83,7 @@ End reset
   border-radius: 5px;
   margin-left: 30px;
   margin-right: 30px;
+  cursor:pointer;
   background-color: rgba(255,255,255,0.2);
   -webkit-transition: all 0.4s ease-in-out 0s;
   -moz-transition: all 0.4s ease-in-out 0s;
@@ -107,7 +108,7 @@ End reset
   margin-top: 20px;
 }
 
-.text-content {
+#text-content {
   margin-top: 300px;
   height: auto;
   display: flex;
@@ -116,14 +117,24 @@ End reset
   text-align: center;
 }
 
-.text-content h1 {
+#text-content h1 {
   font-family: Arial, Helvetica, sans-serif;
   color: white;
   font-size: 100px;
 }
 
-.text-content p {
+#text-content p {
   font-family: Arial, Helvetica, sans-serif;
   color: white;
   font-size: 50px;
+}
+
+#text-content ul {
+  list-style-position: inside;
+}
+
+#text-content ul li {
+  list-style-position: inside;
+  color: white;
+  padding-top: 10px;
 }
